--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
     "name": "nodecode",
     "version": "1.0.0",
     "description": "first package created ",
-    "main": "1-intro.js",
+    "main": "app.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "nodemon app.js",
+        "dev": "nodemon app.js"
     },
     "author": "justxee",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "nodemon": "^2.0.7"
+    }
 }
